# air-conditioning-design

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
air-conditioning-design-paper/: 负荷计算报告.docx
scripts/: __init__.py  build_neutral_mother_model.py  build_tianjin_fcu_doas.py  build_tianjin_ideal_loads.py  build_tianjin_vrf.py  generate_defense_speech.py  generate_load_calc_docx.py  generate_load_calc_tables.py  parse_tianjin_fcu_doas_results.py  parse_tianjin_results.py  parse_tianjin_vrf_results.py  prepare_tianjin_weather.py  project_paths.py  run_cltd_load_calculation.py  run_energyplus_case.py  verify_direction1_consistency.py
tests/: conftest.py  test_build_chengdu_fcu_doas.py  test_build_chengdu_ideal_loads.py  test_build_chengdu_vrf.py  test_build_chongqing_fcu_doas.py  test_build_chongqing_ideal_loads.py  test_build_chongqing_vrf.py  test_build_model_figures.py  test_build_neutral_mother_model.py  test_build_shenyang_fcu_doas.py  test_build_shenyang_ideal_loads.py  test_build_shenyang_vrf.py  test_build_shenzhen_fcu_doas.py  test_build_shenzhen_ideal_loads.py  test_build_shenzhen_vrf.py  test_build_tianjin_fcu_doas.py  test_build_tianjin_ideal_loads.py  test_build_tianjin_vrf.py  test_defense_chinese_figures.py  test_figure_annotations.py  test_figure_geometry.py  test_figure_paths.py  test_floorplan_dxf.py  test_models_common.py  test_parse_chengdu_fcu_doas_results.py  test_parse_chengdu_ideal_loads_results.py  test_parse_chengdu_vrf_results.py  test_parse_chongqing_fcu_doas_results.py  test_parse_chongqing_ideal_loads_results.py  (+15 more)
(+325 files in other folders)
