[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airconditioningdesign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["ezdxf>=1.3,<2", "matplotlib>=3.8,<4"]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9.0"]

[tool.setuptools.packages.find]
where = ["src/air-conditioning-design"]
